<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="16dp"
        android:text="@string/service_unbounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listSong"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="168dp"
        android:layout_height="57dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="87dp"
        android:text="@string/display_all_song_information"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <ListView
        android:id="@+id/songlist"
        android:layout_width="382dp"
        android:layout_height="376dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="55dp"
        android:text="@string/song_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/submit_song"
        app:layout_constraintStart_toEndOf="@+id/editText1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="18dp"
        android:layout_toEndOf="@+id/textView2"
        android:background="#CCCCCC"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="199dp"
        android:layout_height="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="195dp"
        android:text="@string/enter_the_song_number_below"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listSong"
        android:layout_width="104dp"
        android:layout_height="143dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/song_list"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/songlist" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="9dp"
        android:text="@string/pause"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songlist" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="56dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="1dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />


</androidx.constraintlayout.widget.ConstraintLayout>